fix: decrease gap in .form

--- a/src/app/style/components/_form.scss
+++ b/src/app/style/components/_form.scss
@@ -1,5 +1,5 @@
 .form {
-  @apply flex flex-col items-center gap-10 py-5;
+  @apply flex flex-col items-center gap-7 py-5;
 
   button[type="submit"] {
     @apply w-1/2 sm:w-1/3 lg:w-1/5;
